--- a/css/contentScript.css
+++ b/css/contentScript.css
@@ -1,70 +1,73 @@
-.btn {
-    padding: .25rem .5rem;
-    font-size: .875rem;
-    line-height: 1.5;
-    border-radius: .2rem;
-    display: inline-block;
-    font-weight: 400;
-    color: #212529;
+.drawerHandle {
+    position: absolute; /*这句不能少，否则动不起来*/
+    animation: hurong 0.5s infinite alternate; /*keyframes名称，动画时间，循环*/
+    -moz-animation: hurong 0.5s infinite alternate; /*火狐*/
+    -o-animation: hurong 0.5s infinite alternate; /*opera*/
+    -webkit-animation: hurong 0.5s infinite alternate; /*chrome safari*/
+    -ms-animation: hurong 0.5s infinite alternate; /*ie*/
+}
+
+@keyframes hurong {
+    0% {
+        transform: translate(2px)
+    }
+    25% {
+        transform: translate(3px)
+    }
+    50% {
+        transform: translate(4px)
+    }
+    75% {
+        transform: translate(5px)
+    }
+    100% {
+        transform: translate(0px)
+    }
+}
+
+.drawer {
+    height: calc(100% - 66px);
+    position: absolute;
+    display: none;
+    right: 5px;
+    top: 36px;
+    width: 0px;
+    opacity: 1;
+    z-index: 1;
+    background-color: white;
+    border-radius: 5px;
+
+    /*border: 1px solid red;*/
+    /*width: 290px !important;*/
+}
+
+.drawerDoor {
+    height: 100%;
+    width: 20px;
+    background-color: white;
+    float: right;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
     text-align: center;
-    vertical-align: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-color: transparent;
-    border: 1px solid transparent;
-    /*padding: 0.375rem 0.75rem;*/
-    /*font-size: 1rem;*/
-    /*line-height: 1.5;*/
-    /*border-radius: 0.25rem;*/
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    font-weight: bold;
+    display: flex;
+    border-left: groove;
+    border-left-width: 1px;
 }
 
-.btn-outline-primary {
-    color: #007bff;
-    border-color: #007bff;
+.drawer-body {
+    /*background-color: darkgrey;*/
+    /*opacity: 0.5;*/
+    margin-right: 20px;
 }
 
-.btn-outline-primary:hover {
-    color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
-}
-
-.btn-outline-primary:focus, .btn-outline-primary.focus {
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
-}
-
-.btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #007bff;
-    background-color: transparent;
-}
-
-.btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
-.show > .btn-outline-primary.dropdown-toggle {
-    color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
-}
-
-.btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
-.show > .btn-outline-primary.dropdown-toggle:focus {
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
-}
-
-.kauij{
-    position:absolute;/*这句不能少，否则动不起来*/
-    animation:hurong 0.5s infinite alternate;/*keyframes名称，动画时间，循环*/
-    -moz-animation:hurong 0.5s infinite alternate;/*火狐*/
-    -o-animation:hurong 0.5s infinite alternate;/*opera*/
-    -webkit-animation:hurong 0.5s infinite alternate;/*chrome safari*/
-    -ms-animation:hurong 0.5s infinite alternate;/*ie*/
-}
-@keyframes hurong{
-    0%{transform: translate(2px)}
-    25%{transform: translate(3px)}
-    50%{transform: translate(4px)}
-    75%{transform: translate(5px)}
-    100%{transform: translate(0px)}
+#tableHeader li {
+    padding-left: 10px;
+    margin: 1px 0px;
+    cursor: move;
+    /*background-color: #f8f9fa;*/
+    border-bottom: 1px solid #adb5bd;
+    /*display: list-item;*/
+    /*border-top-right-radius: unset;*/
+    /*border-bottom-right-radius: unset;*/
 }
