--- a/css/contentScript.css
+++ b/css/contentScript.css
@@ -1,3 +1,58 @@
+.btn {
+    padding: .25rem .5rem;
+    font-size: .875rem;
+    line-height: 1.5;
+    border-radius: .2rem;
+    display: inline-block;
+    font-weight: 400;
+    color: #212529;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    /*padding: 0.375rem 0.75rem;*/
+    /*font-size: 1rem;*/
+    /*line-height: 1.5;*/
+    /*border-radius: 0.25rem;*/
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.btn-outline-primary {
+    color: #007bff;
+    border-color: #007bff;
+}
+
+.btn-outline-primary:hover {
+    color: #fff;
+    background-color: #007bff;
+    border-color: #007bff;
+}
+
+.btn-outline-primary:focus, .btn-outline-primary.focus {
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
+}
+
+.btn-outline-primary.disabled, .btn-outline-primary:disabled {
+    color: #007bff;
+    background-color: transparent;
+}
+
+.btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
+.show > .btn-outline-primary.dropdown-toggle {
+    color: #fff;
+    background-color: #007bff;
+    border-color: #007bff;
+}
+
+.btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
+.show > .btn-outline-primary.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
+}
+
 .drawerHandle {
     position: absolute; /*这句不能少，否则动不起来*/
     animation: hurong 0.5s infinite alternate; /*keyframes名称，动画时间，循环*/
@@ -41,7 +96,7 @@
     /*width: 290px !important;*/
 }
 
-.drawerDoor {
+.drawer-door {
     height: 100%;
     width: 20px;
     background-color: white;
@@ -59,6 +114,7 @@
     /*background-color: darkgrey;*/
     /*opacity: 0.5;*/
     margin-right: 20px;
+    height: 100%;
 }
 
 #tableHeader li {
@@ -70,4 +126,27 @@
     /*display: list-item;*/
     /*border-top-right-radius: unset;*/
     /*border-bottom-right-radius: unset;*/
+}
+
+.drawer-scrollbar {
+    height: calc(100% - 35px);
+    overflow: hidden;
+    overflow-y: auto;
+}
+
+.drawer-scrollbar::-webkit-scrollbar { /*滚动条整体样式*/
+    width: 7px; /*高宽分别对应横竖滚动条的尺寸*/
+    height: 1px;
+}
+
+.drawer-scrollbar::-webkit-scrollbar-thumb { /*滚动条里面小方块*/
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+    background: #adb5bd;
+}
+
+.drawer-scrollbar::-webkit-scrollbar-track { /*滚动条里面轨道*/
+    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    background: #EDEDED;
 }
