--- a/css/contentScript.css
+++ b/css/contentScript.css
@@ -81,14 +81,16 @@
 }
 
 .drawer {
-    height: calc(100% - 66px);
+    /*height: calc(100% - 66px);*/
+    height: 100%;
     position: absolute;
     display: none;
-    right: 5px;
-    top: 36px;
+    right: 0px;
+    /*top: 36px;*/
     width: 0px;
-    opacity: 1;
+    /*opacity: 1;*/
     z-index: 1;
+    /*float: right;*/
     background-color: white;
     border-radius: 5px;
 
