--- a/css/contentScript.css
+++ b/css/contentScript.css
@@ -1,8 +1,8 @@
 .btn-plugin {
-    padding: .25rem .5rem;
-    font-size: .875rem;
+    padding: 3px 6px;
+    font-size: 16px;
     line-height: 1.5;
-    border-radius: .2rem;
+    border-radius: 5px;
     display: inline-block;
     font-weight: 400;
     color: #212529;
